[package]
name = "imhdlr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "^0.12.0"
image = "0.24.8"
glob = { version = "0.3.1", features = [] }
rayon = "1.8.1"

[profile.dev]
opt-level = 0

[profile.release]
strip = "debuginfo"
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = "fat"
